# figma-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.en.md  README.md
.cargo/: config.toml
.claude/skills/figma-design/: SKILL.md
.github/workflows/: ci.yml  lint.yml  release.yml
scripts/: install.sh  uninstall.sh
src/: images.rs  lib.rs  main.rs
src/cli/: args.rs  commands.rs  context.rs  mod.rs  output.rs  summary.rs
src/client/: auth.rs  error.rs  figma.rs  mod.rs  retry.rs
src/core/: cache.rs  config.rs  constants.rs  errors.rs  mod.rs  performance.rs  query.rs
src/extractor/: mod.rs  text.rs
src/models/: config.rs  document.rs  extraction.rs  mod.rs
src/service/: mod.rs  orchestrator.rs  traversal.rs
src/utils/: mod.rs  validation.rs
