[package]
name = "figma-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
authors = ["Junyeong Park <ai.junyeong@gmail.com>"]
description = "High-performance CLI tool for extracting and analyzing Figma designs"
documentation = "https://docs.rs/figma-cli"
homepage = "https://github.com/junyeong-ai/figma-cli"
repository = "https://github.com/junyeong-ai/figma-cli"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["figma", "cli", "design", "extraction", "api"]
categories = ["command-line-utilities", "api-bindings", "development-tools"]
exclude = [
    ".github/*",
    ".claude/*",
    "tests/*",
    "benches/*",
    "*.md",
    "!README.md",
    "!LICENSE*",
    ".gitignore",
]

[[bin]]
name = "figma"
path = "src/main.rs"

[lib]
name = "figma_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "cargo", "unicode", "wrap_help"] }
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "gzip", "brotli", "deflate"], default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value", "preserve_order", "arbitrary_precision"] }
serde_path_to_error = "0.1"
toml = "0.8"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
anyhow = "1.0"
thiserror = "2.0"
rayon = "1.10"
crossbeam = "0.8"
dashmap = "6.1"
parking_lot = "0.12"
lru = "0.12"
once_cell = "1.21"
bytes = "1.10"
futures = "0.3"
blake3 = "1.5"
zeroize = { version = "1.8", features = ["derive", "std"] }
base64 = "0.22"
url = "2.5"
regex = "1.12"
chrono = { version = "0.4", features = ["serde", "clock", "std"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3.16"
criterion = "0.6"
proptest = "1.6"
pretty_assertions = "1.4"
serial_test = "3.2"
rstest = "0.23"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug-assertions = false
incremental = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 2
debug = true

[profile.bench]
inherits = "release"
lto = true

[profile.ci]
inherits = "test"
opt-level = 1
debug = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
